--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,8 +18,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".NewEventActivity" />
-        <activity android:name=".EventDetailsFragment"></activity>
+        <activity android:name=".NewEventActivity"
+            android:parentActivityName=".MainActivity" >
+            <meta-data android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.shzlabs.app.keeptrack.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
